[gd_scene load_steps=5 format=3 uid="uid://bh7fdchs08gib"]

[ext_resource type="Texture2D" uid="uid://vj3eh2pnh8n" path="res://Image/Menu/CustomGameWaitRoom.png" id="1_pn6vx"]
[ext_resource type="Script" path="res://Script/Menu/CustomiseGameScreen.gd" id="2_e2m5u"]
[ext_resource type="PackedScene" uid="uid://de34ypdb6irdo" path="res://Scene/Menu/PeerStatus.tscn" id="2_ildcw"]
[ext_resource type="FontFile" uid="uid://dq1fkh6cln463" path="res://Font/Forgotten.ttf" id="2_n8ewn"]

[node name="CustomiseGameScreen" type="Sprite2D"]
texture = ExtResource("1_pn6vx")
centered = false
script = ExtResource("2_e2m5u")

[node name="Room" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 52.0
offset_top = 191.0
offset_right = 1168.0
offset_bottom = 933.0

[node name="MatchIDText" type="LineEdit" parent="Room"]
layout_mode = 0
offset_left = 284.0
offset_top = 659.0
offset_right = 882.0
offset_bottom = 702.0
theme_override_font_sizes/font_size = 25

[node name="StatusContainer" type="VBoxContainer" parent="Room"]
layout_mode = 0
offset_left = 49.0
offset_top = 195.0
offset_right = 1065.0
offset_bottom = 394.0

[node name="PeerStatus" parent="Room/StatusContainer" instance=ExtResource("2_ildcw")]
layout_mode = 2

[node name="ButtonCopyMatchID" type="Button" parent="Room"]
modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 888.0
offset_top = 660.0
offset_right = 1058.0
offset_bottom = 701.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30

[node name="Options" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1359.0
offset_top = 204.0
offset_right = 1858.0
offset_bottom = 748.0

[node name="Ready" type="Control" parent="Options"]
anchors_preset = 0
offset_left = 32.0
offset_top = 643.0
offset_right = 223.0
offset_bottom = 716.0

[node name="TextButtonReady" type="Label" parent="Options/Ready"]
layout_mode = 0
offset_left = -1.0
offset_top = -18.0
offset_right = 191.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_n8ewn")
theme_override_font_sizes/font_size = 50
text = "PrÃªt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonReady" type="Button" parent="Options/Ready"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -1.0
offset_top = -18.0
offset_right = 189.0
offset_bottom = 55.0
mouse_default_cursor_shape = 2

[node name="StartGame" type="Control" parent="Options"]
visible = false
anchors_preset = 0
offset_left = 274.0
offset_top = 625.0
offset_right = 449.0
offset_bottom = 696.0

[node name="TextButtonStartGame" type="Label" parent="Options/StartGame"]
layout_mode = 0
offset_left = 14.0
offset_top = -1.0
offset_right = 204.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("2_n8ewn")
theme_override_font_sizes/font_size = 60
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonStart" type="Button" parent="Options/StartGame"]
modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 16.0
offset_right = 207.0
offset_bottom = 75.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48

[node name="ButtonQuitRoom" type="Button" parent="Options"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -1346.0
offset_top = -77.0
offset_right = -1239.0
offset_bottom = -12.0
mouse_default_cursor_shape = 2

[connection signal="button_down" from="Room/ButtonCopyMatchID" to="." method="_on_button_copy_match_id_button_down"]
[connection signal="button_down" from="Options/Ready/ButtonReady" to="." method="_on_button_ready_button_down"]
[connection signal="button_down" from="Options/StartGame/ButtonStart" to="." method="_on_button_start_button_down"]
[connection signal="button_down" from="Options/ButtonQuitRoom" to="." method="_on_button_quit_room_button_down"]
